--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+  <main>
+    <article>
+    </article>
+    <div class="div-container">
+    <div class="image-container" id="image-container-1"></div>
+    <div class="image-container" id="image-container-2"></div>
+    <div class="image-container" id=></div>
+    </div>
+  </main>
   <script type="text/javascript" src="app.js"></script>
 </body>
 
