pictures rendering on page when I call function that is supposed to do that

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="div-container">
     <div class="image-container" id="image-container-1"></div>
     <div class="image-container" id="image-container-2"></div>
-    <div class="image-container" id=></div>
+    <div class="image-container" id="image-container-3"></div>
     </div>
   </main>
   <script type="text/javascript" src="app.js"></script>
