--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
   <main>
     <article>
+      Select the Item you would be most likely to buy out of this bus mall magazine.
     </article>
-    <div class="div-container">
-    <div class="image-container" id="image-container-1"></div>
+    <div id="div-container" class="div-container">
+    <!-- <div class="image-container" id="image-container-1"></div>
     <div class="image-container" id="image-container-2"></div>
-    <div class="image-container" id="image-container-3"></div>
+    <div class="image-container" id="image-container-3"></div> -->
     </div>
   </main>
   <script type="text/javascript" src="app.js"></script>
