added local storage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <main id="main">
+    <button id="clear-local-storage">Clear Local Storage</button>
     <article id="text-prompt">
       Select the Item you would be most likely to buy out of this bus mall magazine.
     </article>
